# client_craft_mk4

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
benches/: benchmarks.rs  slow.rs
examples/: tree_builder.rs
src/: lib.rs
src/recipes/: mod.rs  recipe.rs  recipe_type.rs  tags.rs  tree_builder.rs
tools/: get_random_recipes.rs
tools/fetch_minecraft_recipes/: Cargo.toml
tools/fetch_minecraft_recipes/src/: main.rs
