[workspace]
resolver = "3"
members = ["tools/fetch_minecraft_recipes"]

[package]
name = "client_craft_mk4"
version = "0.1.0"
edition = "2024"

[lib]
name = "ccmk4"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = { version = "2.0.18" }

[dev-dependencies]
divan = { version = "0.1.21" }
rand = { version = "0.10.2" }

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "unique_crafting_types"
path = "tools/unique_crafting_types.rs"

[[example]]
name = "get_random_recipes"
path = "tools/get_random_recipes.rs"