[package]
name = "fetch_minecraft_recipes"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5" }
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros"] }
piston-mc = { version = "0.1.5-beta", features = ["downloads"] }
zip = { version = "8.6.0", features = [] }
simple_download_utility = "0.1.1"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3